WebCore/inspector/InspectorResourceAgent.cpp
@@ -52,6 +52,8 @@
 #include "ResourceError.h"
 #include "ResourceRequest.h"
 #include "ResourceResponse.h"
+#include "ScriptCallStack.h"
+#include "ScriptCallStackFactory.h"
 #include "SharedBuffer.h"
 #include "TextEncoding.h"
 #include "WebSocketHandshakeRequest.h"
@@ -285,7 +287,13 @@ InspectorResourceAgent::~InspectorResourceAgent()
 void InspectorResourceAgent::identifierForInitialRequest(unsigned long identifier, const KURL& url, DocumentLoader* loader)
 {
     RefPtr<InspectorObject> loaderObject = buildObjectForDocumentLoader(loader);
-    m_frontend->identifierForInitialRequest(identifier, url.string(), loaderObject);
+    RefPtr<ScriptCallStack> callStack = createScriptCallStack(ScriptCallStack::maxCallStackSizeToCapture, true);
+    RefPtr<InspectorValue> callStackValue;
+    if (callStack)
+        callStackValue = callStack->buildInspectorObject();
+    else
+        callStackValue = InspectorValue::null();
+    m_frontend->identifierForInitialRequest(identifier, url.string(), loaderObject, callStackValue);
 }
 
 void InspectorResourceAgent::willSendRequest(unsigned long identifier, ResourceRequest& request, const ResourceResponse& redirectResponse)
